--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nemo - 漫画分享平台</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/book.css"/>
+    <link rel="stylesheet" href="css/author.css"/>
+    <link rel="stylesheet" href="css/page.css"/>
     <style>
         .form-label-2 {
         }
@@ -24,33 +28,8 @@
     </style>
 </head>
 <body>
-<!--<header class="header">-->
-    <!--<div class="header-fixed">-->
-        <!--<div class="container">-->
-            <!--<h1 class="app-name pull-left">Nemo</h1>-->
-            <!--<div class="account pull-right">-->
-                <!--<div class="account-info">-->
-                    <!--<img class="account-avatar" src="images/avatar.jpg" alt=""/>-->
-                    <!--<span class="account-name">王振琦</span>-->
-                    <!--<span class="icon icon-menu-down"></span>-->
-                <!--</div>-->
-                <!--<nav class="account-nav">-->
-                    <!--<a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>-->
-                    <!--<a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>-->
-                    <!--<p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>-->
-                <!--</nav>-->
-            <!--</div>-->
-            <!--<span class="header-line pull-right"></span>-->
-            <!--<button class="btn btn-link btn-sm header-action pull-right" style="width: auto">登录</button>-->
-            <!--<span class="header-line pull-right"></span>-->
-            <!--<a class="header-action pull-right" href="">-->
-                <!--<button class="btn btn-primary btn-sm">注册</button>-->
-            <!--</a>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</header>-->
 <header class="header">
-    <div class="header-fixed">
+    <div class="header-fixed" style="display: none">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
             <div class="account pull-right">
@@ -59,105 +38,143 @@
                     <span class="account-name">手机版</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <div class="app-code">
-                    <img class="app-code-img" src="images/qrcode.png" alt=""/>
+                <div class="app-mobile">
+                    <img class="app-code" src="images/qrcode.png" alt=""/>
                     <p class="app-code-note">扫一扫下载手机客户端</p>
                 </div>
             </div>
             <span class="header-line pull-right"></span>
-            <button class="btn btn-link btn-sm header-action pull-right" style="width: auto">登录</button>
+            <button class="btn btn-sm btn-link header-action login-action pull-right">登录</button>
             <span class="header-line pull-right"></span>
             <a class="header-action pull-right" href="">
-                <button class="btn btn-primary btn-sm">注册</button>
+                <button class="btn btn-sm btn-primary">注册</button>
             </a>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
+        </div>
+    </div>
+    <div class="header-fixed">
+        <div class="container">
+            <h1 class="app-name pull-left">Nemo</h1>
+            <div class="account pull-right">
+                <div class="account-info">
+                    <img class="account-avatar" src="images/avatar.jpg" alt=""/>
+                    <span class="account-name">王振琦</span>
+                    <span class="icon icon-menu-down"></span>
+                </div>
+                <nav class="account-nav">
+                    <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
+                    <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
+                    <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
+                </nav>
+            </div>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
         </div>
     </div>
 </header>
 <main class="container">
     <section class="content">
-        <!--<div class="book">-->
-        <!--<img class="book-cover" src="images/portrait.jpg"/>-->
-        <!--<section class="book-info">-->
-        <!--<h6 class="book-name">漫十年</h6>-->
-        <!--<p class="book-desc">-->
-        <!--五月初-->
-        <!--屹立在温暖的阳光下-->
-        <!--心情也变得柔和起来-->
-        <!--那些你曾期待的 却放弃你的-->
-        <!--那些你不在意的 你已放弃的-->
-        <!--都成了自己辛辛苦苦的独角戏-->
-        <!--在新的生活到来之前-->
-        <!--在煎熬中最后翻阅那些过往-->
-        <!--一番不舍与惋惜之后-->
-        <!--才发觉一切是那么的不值得-->
-        <!--原来实现愿望是这么的难-->
-        <!--我用了这么久才能去忘记你-->
-        <!--</p>-->
-        <!--<p class="book-note">-->
-        <!--<span class="item">风格 清新</span>-->
-        <!--<span class="item-line"></span>-->
-        <!--<span class="item">收藏 123</span>-->
-        <!--<a class="icon icon-link pull-right" href=""></a>-->
-        <!--</p>-->
-        <!--</section>-->
-        <!--</div>-->
-        <!--<div class="author">-->
-        <!--<img class="author-portrait" src="images/portrait.jpg" alt=""/>-->
-        <!--<img class="author-avatar" src="images/avatar.jpg" alt=""/>-->
-        <!--<p class="author-name">王振琦</p>-->
-        <!--<section class="author-info">-->
-        <!--<p class="author-motto">心事浩渺连广宇</p>-->
-        <!--<p class="author-profile">-->
-        <!--我是一个喜欢艺术热爱生活的小胖子-->
-        <!--我的梦想是成为一名架构师 但是我还不怎么会编程-->
-        <!--那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好-->
-        <!--还是不要做架构师了 架构师什么的都是秃头-->
-        <!--也不要做艺术家了 艺术家什么的都是流氓-->
-        <!--比流氓还流氓的是专家学者-->
-        <!--</p>-->
-        <!--<p class="author-note">-->
-        <!--<span class="item">作品&nbsp;18</span>-->
-        <!--<span class="item-line"></span>-->
-        <!--<span class="item">粉丝&nbsp;1660</span>-->
-        <!--<a class="icon icon-link pull-right" href="author-book.html"></a>-->
-        <!--</p>-->
-        <!--</section>-->
-        <!--</div>-->
+        <div class="author pull-left">
+            <section class="author-style">
+                <img class="author-portrait" src="images/portrait.jpg" alt=""/>
+                <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+                <h6 class="author-name">王振琦</h6>
+            </section>
+            <section class="author-info">
+                <p class="author-biography">
+                    我是一个喜欢艺术热爱生活的小胖子
+                    我的梦想是成为一名架构师 但是我还不怎么会编程
+                    那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                    还是不要做架构师了 架构师什么的都是秃头
+                    也不要做艺术家了 艺术家什么的都是流氓
+                    比流氓还流氓的是专家学者
+                </p>
+                <p class="author-note">
+                    <span class="pull-left">作品&nbsp;18</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">粉丝&nbsp;1660</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book pull-left">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="page pull-left">
+            <img class="page-image" src="images/nemo.jpg" alt=""/>
+            <p class="page-order">1</p>
+            <p class="page-note">
+                <img src="images/icon/icon_setup_white.png"/>
+                <img src="images/icon/icon_trash_white.png"/>
+            </p>
+        </div>
     </section>
 </main>
-<!--<div class="modal">-->
-    <!--<dialog class="modal-dialog">-->
-        <!--<header class="modal-header">-->
-            <!--<h3 class="modal-title">创建</h3>-->
-            <!--<div class="modal-dismiss"><span class="icon icon-remove"></span></div>-->
-        <!--</header>-->
-        <!--<main class="modal-content">-->
-            <!--<form class="form-horizontal form-label-2">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="form-label">标签</label>-->
-                    <!--<input class="form-control" type="text"/>-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                    <!--<label class="form-label">标签</label>-->
-                    <!--<select class="form-control">-->
-                        <!--<option selected disabled></option>-->
-                        <!--<option value="1">1</option>-->
-                        <!--<option value="1">2</option>-->
-                        <!--<option value="1">3</option>-->
-                    <!--</select>-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                    <!--<label class="form-label">标签</label>-->
-                    <!--<textarea class="form-control"></textarea>-->
-                <!--</div>-->
-            <!--</form>-->
-            <!--<button class="btn btn-primary pull-right" type="button">创建</button>-->
-        <!--</main>-->
-        <!--<footer class="modal-footer">-->
-            <!--<button class="btn btn-sm btn-default pull-right" type="button" disabled>取消</button>-->
-            <!--<button class="btn btn-sm btn-primary pull-right" type="button">保存</button>-->
-        <!--</footer>-->
-    <!--</dialog>-->
-<!--</div>-->
+<div class="modal">
+    <dialog class="modal-dialog">
+        <header class="modal-header">
+            <h1 class="modal-title">创建漫画册</h1>
+            <div class="modal-dismiss"><span class="icon icon-remove"></span></div>
+        </header>
+        <main class="modal-content">
+            <form class="form-horizontal form-label-2">
+                <div class="form-group">
+                    <label class="form-label">名称</label>
+                    <input class="form-control" type="text"/>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">风格</label>
+                    <select class="form-control">
+                        <option selected disabled>请选择</option>
+                        <option value="1">清新</option>
+                        <option value="1">唯美</option>
+                        <option value="1">爆笑</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">标签</label>
+                    <textarea class="form-control"></textarea>
+                </div>
+            </form>
+        </main>
+        <footer class="modal-footer">
+            <button class="btn btn-sm btn-default pull-right" type="button">取消</button>
+            <button class="btn btn-sm btn-primary pull-right" type="button">保存</button>
+        </footer>
+    </dialog>
+</div>
+<footer class="footer">
+    <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
+</footer>
 </body>
 </html>
