--- a/user-settings.html
+++ b/user-settings.html
@@ -35,20 +35,24 @@
 <main class="container">
     <div class="panel">
         <section class="user-info">
-            <img class="user-avatar pull-left" src="" alt=""/>
+            <img class="user-avatar pull-left" src="images/icon/picture_silver.png" alt=""/>
             <button class="btn btn-choose btn-default pull-left" type="button">
                 <span class="icon icon-link"></span>选择图片
             </button>
         </section>
         <nav class="user-option">
-            <span>个人信息</span>
-            <span class="active">邮箱</span>
+            <span class="active">个人信息</span>
+            <span>邮箱</span>
             <span>密码</span>
         </nav>
         <form class="form-horizontal form-label-2">
             <div class="form-group">
                 <label class="form-label">姓名</label>
                 <p class="form-label">王振琦</p>
+            </div>
+            <div class="form-group">
+                <label class="form-label">性别</label>
+
             </div>
             <div class="form-group">
                 <label class="form-label">城市</label>
@@ -69,11 +73,47 @@
                 <label class="form-label">简介</label>
                 <textarea class="form-control"></textarea>
             </div>
+            <button class="btn btn-primary" type="button">保存</button>
+        </form>
+        <form class="form-horizontal form-label-2">
+            <div class="form-group">
+                <label class="form-label">邮箱</label>
+                <input class="form-control" type="text"/>
+            </div>
+            <div class="form-group">
+                <label class="form-label">密码</label>
+                <input class="form-control" type="password"/>
+            </div>
+            <button class="btn btn-primary" type="button">保存</button>
+        </form>
+        <form class="form-horizontal form-label-4">
+            <div class="form-group">
+                <label class="form-label">原密码</label>
+                <input class="form-control" type="password"/>
+            </div>
+            <div class="form-group">
+                <label class="form-label">新密码</label>
+                <input class="form-control" type="password"/>
+            </div>
+            <div class="form-group">
+                <label class="form-label">确认密码</label>
+                <input class="form-control" type="password"/>
+            </div>
+            <button class="btn btn-primary" type="button">保存</button>
         </form>
     </div>
 </main>
 <footer class="footer">
     <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
 </footer>
+<script src="js/vue.js"></script>
+<script>
+    const userSettings = new Vue({
+        el: "#userSettings",
+        data: {
+            tabIndex: 0,
+        },
+    });
+</script>
 </body>
 </html>
