2019/01/30 完善个人设置界面

--- a/user-settings.html
+++ b/user-settings.html
@@ -52,7 +52,14 @@
             </div>
             <div class="form-group">
                 <label class="form-label">性别</label>
-
+                <p class="form-control radio">
+                    <input type="radio"/>
+                    <span class="form-radio"></span>女
+                    <input type="radio"/>
+                    <span class="form-radio"></span>男
+                    <input type="radio"/>
+                    <span class="form-radio"></span>保密
+                </p>
             </div>
             <div class="form-group">
                 <label class="form-label">城市</label>
