--- a/user-index.html
+++ b/user-index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="css/author.css"/>
 </head>
 <body>
-<header class="header">
+<header id="header" class="header">
     <div class="header-fixed">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
-            <div class="account pull-right">
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
                 <div class="account-info">
                     <img class="account-avatar" src="images/avatar.jpg" alt=""/>
                     <span class="account-name">王振琦</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <nav class="account-nav" style="display: none">
+                <nav class="account-nav" v-if="isVisible" v-cloak>
                     <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
                     <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
                     <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
@@ -34,7 +34,7 @@
         </div>
     </div>
 </header>
-<main class="container">
+<main id="userIndex" class="container">
     <div class="master">
         <section class="user-style">
             <img class="user-portrait" src="" alt=""/>
@@ -60,7 +60,7 @@
         </nav>
     </div>
     <section class="content">
-        <div class="create">
+        <div class="create" @click="createBookModalVisible">
             <div class="create-logo"><span class="icon icon-plus"></span></div>
             <span class="create-note">创建漫画册</span>
         </div>
@@ -146,12 +146,12 @@
 <footer class="footer">
     <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
 </footer>
-<div class="modal">
+<div id="createBookModal" class="modal" v-if="isVisible" v-cloak>
     <dialog class="modal-dialog">
         <header class="modal-header">
             <h1 class="modal-title">创建漫画册</h1>
             <div class="modal-dismiss">
-                <span class="icon icon-remove"></span>
+                <span class="icon icon-remove" @click="invisible"></span>
             </div>
         </header>
         <main class="modal-content">
@@ -188,10 +188,37 @@
             </form>
         </main>
         <footer class="modal-footer">
-            <button class="btn btn-sm btn-default pull-right" type="button">取消</button>
+            <button class="btn btn-sm btn-default pull-right" type="button" @click="invisible">取消</button>
             <button class="btn btn-sm btn-primary pull-right" type="button">创建</button>
         </footer>
     </dialog>
 </div>
+<script src="js/vue.js"></script>
+<script src="js/nemo.js"></script>
+<script>
+    const userIndex = new Vue({
+        el: "#userIndex",
+        methods: {
+            createBookModalVisible: function () {
+                createBookModal.visible();
+            }
+        }
+    });
+
+    const createBookModal = new Vue({
+        el: "#createBookModal",
+        data: {
+            isVisible: false
+        },
+        methods: {
+            visible: function () {
+                this.isVisible = true;
+            },
+            invisible: function () {
+                this.isVisible = false;
+            }
+        }
+    });
+</script>
 </body>
 </html>
