--- a/user-settings.html
+++ b/user-settings.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="css/user-settings.css"/>
 </head>
 <body>
-<header class="header">
+<header id="header" class="header">
     <div class="header-fixed">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
-            <div class="account pull-right">
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
                 <div class="account-info">
                     <img class="account-avatar" src="images/avatar.jpg" alt=""/>
                     <span class="account-name">王振琦</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <nav class="account-nav" style="display: none">
+                <nav class="account-nav" v-if="isVisible">
                     <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
                     <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
                     <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
@@ -32,44 +32,53 @@
         </div>
     </div>
 </header>
-<main class="container">
+<main id="userSettings" class="container">
     <div class="panel">
         <section class="user-info">
-            <img class="user-avatar pull-left" src="images/icon/picture_silver.png" alt=""/>
-            <button class="btn btn-choose btn-default pull-left" type="button">
+            <img class="user-avatar pull-left" src="images/user_silver.png" alt=""/>
+            <button class="btn btn-choose pull-left" type="button">
                 <span class="icon icon-link"></span>选择图片
             </button>
         </section>
         <nav class="user-option">
-            <span class="active">个人信息</span>
-            <span>邮箱</span>
-            <span>密码</span>
+            <span :class="{'active': 1 == tabIndex}" @click="changeTab(1)">个人信息</span>
+            <span :class="{'active': 2 == tabIndex}" @click="changeTab(2)">邮箱</span>
+            <span :class="{'active': 3 == tabIndex}" @click="changeTab(3)">密码</span>
         </nav>
-        <form class="form-horizontal form-label-2">
+        <form class="form-horizontal form-label-2" v-if="1 == tabIndex">
             <div class="form-group">
                 <label class="form-label">姓名</label>
                 <p class="form-label">王振琦</p>
             </div>
             <div class="form-group">
                 <label class="form-label">性别</label>
-                <p class="form-control radio">
-                    <input type="radio"/>
-                    <span class="form-radio"></span>女
-                    <input type="radio"/>
-                    <span class="form-radio"></span>男
-                    <input type="radio"/>
-                    <span class="form-radio"></span>保密
+                <p class="form-control radio-control">
+                    <label class="radio-inline">
+                        <input type="radio"/>
+                        <span class="radio"></span>
+                        <span class="radio-note">女</span>
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio"/>
+                        <span class="radio"></span>
+                        <span class="radio-note">男</span>
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio"/>
+                        <span class="radio"></span>
+                        <span class="radio-note">保密</span>
+                    </label>
                 </p>
             </div>
             <div class="form-group">
                 <label class="form-label">城市</label>
-                <select class="form-control" type="text">
+                <select class="form-control">
                     <option value="北京市">北京市</option>
                     <option value="上海市">上海市</option>
                     <option value="天津市">天津市</option>
                     <option value="重庆市">重庆市</option>
                 </select>
-                <select class="form-control" type="text">
+                <select class="form-control">
                     <option value="北京市">北京市</option>
                     <option value="上海市">上海市</option>
                     <option value="天津市">天津市</option>
@@ -82,7 +91,7 @@
             </div>
             <button class="btn btn-primary" type="button">保存</button>
         </form>
-        <form class="form-horizontal form-label-2">
+        <form class="form-horizontal form-label-2" v-if="2 == tabIndex">
             <div class="form-group">
                 <label class="form-label">邮箱</label>
                 <input class="form-control" type="text"/>
@@ -93,7 +102,7 @@
             </div>
             <button class="btn btn-primary" type="button">保存</button>
         </form>
-        <form class="form-horizontal form-label-4">
+        <form class="form-horizontal form-label-4" v-if="3 == tabIndex">
             <div class="form-group">
                 <label class="form-label">原密码</label>
                 <input class="form-control" type="password"/>
@@ -114,12 +123,18 @@
     <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
 </footer>
 <script src="js/vue.js"></script>
+<script src="js/nemo.js"></script>
 <script>
     const userSettings = new Vue({
         el: "#userSettings",
         data: {
-            tabIndex: 0,
+            tabIndex: 1,
         },
+        methods: {
+            changeTab: function (index) {
+                this.tabIndex = index;
+            }
+        }
     });
 </script>
 </body>
