2019/02/22 按钮样式优化

--- a/login.html
+++ b/login.html
@@ -32,8 +32,12 @@
                 <button class="btn btn-block btn-primary" type="button">登录</button>
             </div>
             <div class="form-group">
-                <a class="link pull-left" href="register.html">注册</a>
-                <a class="link pull-right" href="register.html">忘记密码</a>
+                <a class="pull-left" href="register.html">
+                    <button class="btn-flexible" type="button">注册</button>
+                </a>
+                <a class="pull-right" href="register.html">
+                    <button class="btn-flexible" type="button">忘记密码</button>
+                </a>
             </div>
         </form>
     </section>
