--- a/register.html
+++ b/register.html
@@ -42,13 +42,14 @@
                 <button class="btn btn-block btn-primary" type="button">注册</button>
             </div>
             <div class="form-group">
-                <label class="checkbox-inline">
+                <label class="checkbox-group">
                     <input type="checkbox" checked/>
                     <span class="checkbox"></span>
-                    <span class="checkbox-note">同意用户协议</span>
+                    <span class="checkbox-note">同意<a class="link" href="">用户协议</a></span>
                 </label>
-
-                <a class="link pull-right" href="register.html">登录</a>
+                <a class="pull-right" href="login.html">
+                    <button class="btn-flexible" type="button">登录</button>
+                </a>
             </div>
         </form>
     </section>
