--- a/user-index.html
+++ b/user-index.html
@@ -159,7 +159,7 @@
                 <div class="form-group img-group">
                     <label class="form-label">封面</label>
                     <img class="form-control" src="images/icon/picture_silver.png" alt=""/>
-                    <button class="btn btn-choose btn-default pull-left" type="button">
+                    <button class="btn btn-elegance pull-left" type="button">
                         <span class="icon icon-link"></span>选择图片
                     </button>
                 </div>
@@ -188,8 +188,8 @@
             </form>
         </main>
         <footer class="modal-footer">
-            <button class="btn btn-sm btn-default pull-right" type="button" @click="invisible">取消</button>
-            <button class="btn btn-sm btn-primary pull-right" type="button">创建</button>
+            <button class="btn btn-petite btn-default pull-right" type="button" @click="invisible">取消</button>
+            <button class="btn btn-petite btn-primary pull-right" type="button">创建</button>
         </footer>
     </dialog>
 </div>
