--- a/user-settings.html
+++ b/user-settings.html
@@ -36,7 +36,7 @@
     <div class="panel">
         <section class="user-info">
             <img class="user-avatar pull-left" src="images/user_silver.png" alt=""/>
-            <button class="btn btn-choose pull-left" type="button">
+            <button class="btn-elegance pull-left" type="button">
                 <span class="icon icon-link"></span>选择图片
             </button>
         </section>
@@ -53,17 +53,17 @@
             <div class="form-group">
                 <label class="form-label">性别</label>
                 <p class="form-control radio-control">
-                    <label class="radio-inline">
+                    <label class="pull-left">
                         <input type="radio"/>
                         <span class="radio"></span>
                         <span class="radio-note">女</span>
                     </label>
-                    <label class="radio-inline">
+                    <label class="pull-left">
                         <input type="radio"/>
                         <span class="radio"></span>
                         <span class="radio-note">男</span>
                     </label>
-                    <label class="radio-inline">
+                    <label class="pull-left">
                         <input type="radio"/>
                         <span class="radio"></span>
                         <span class="radio-note">保密</span>
