2019/02/22 编辑用户漫画册界面

--- a/user-book.html
+++ b/user-book.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>C</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/user-book.css"/>
 </head>
 <body>
+<header class="header">
+    <div class="header-fixed">
+        <div class="container">
+            <h1 class="app-name pull-left">Nemo</h1>
+            <div class="account pull-right">
+                <div class="account-info">
+                    <img class="account-avatar" src="images/avatar.jpg" alt=""/>
+                    <span class="account-name">王振琦</span>
+                    <span class="icon icon-menu-down"></span>
+                </div>
+                <nav class="account-nav">
+                    <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
+                    <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
+                    <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
+                </nav>
+            </div>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
+        </div>
+    </div>
+</header>
+<main class="container">
+    <section class="master">
+        <img class="book-cover" src="" alt=""/>
+        <div class="book-info">
+            <p class="book-name">漫十年</p>
+            <p class="book-description">
+                五月初
+                屹立在温暖的阳光下
+                心情也变得柔和起来
+                那些你曾期待的 却放弃你的
+                那些你不在意的 你已放弃的
+                都成了自己辛辛苦苦的独角戏
+                在新的生活到来之前
+                在煎熬中最后翻阅那些过往
+                一番不舍与惋惜之后
+                才发觉一切是那么的不值得
+                原来实现愿望是这么的难
+                我用了这么久才能去忘记你
+            </p>
+            <p class="book-note"></p>
+        </div>
+    </section>
+    <section class="content">
 
+    </section>
+</main>
 </body>
 </html>
