--- a/user-settings.html
+++ b/user-settings.html
@@ -36,8 +36,8 @@
     <div class="panel">
         <section class="user-info">
             <img class="user-avatar pull-left" src="images/user_silver.png" alt=""/>
-            <button class="btn-elegance pull-left" type="button">
-                <span class="icon icon-link"></span>选择图片
+            <button class="btn-choose pull-left" type="button">
+                <span class="icon icon-camera"></span>
             </button>
         </section>
         <nav class="user-option">
@@ -52,7 +52,7 @@
             </div>
             <div class="form-group">
                 <label class="form-label">性别</label>
-                <p class="form-control radio-control">
+                <p class="form-control radio-group">
                     <label class="pull-left">
                         <input type="radio"/>
                         <span class="radio"></span>
