--- a/login.html
+++ b/login.html
@@ -33,10 +33,10 @@
             </div>
             <div class="form-group">
                 <a class="pull-left" href="register.html">
-                    <button class="btn-flexible" type="button">注册</button>
+                    <button class="btn btn-flexible" type="button">注册</button>
                 </a>
                 <a class="pull-right" href="register.html">
-                    <button class="btn-flexible" type="button">忘记密码</button>
+                    <button class="btn btn-flexible" type="button">忘记密码</button>
                 </a>
             </div>
         </form>
