--- a/register.html
+++ b/register.html
@@ -33,22 +33,22 @@
                 <input class="form-control" type="text" placeholder="6-32个字符，区分大小写"/>
                 <label class="form-label"><span class="icon icon-lock"></span></label>
             </div>
-            <div class="form-group sms-group">
+            <div class="form-group">
                 <button class="btn btn-sms btn-primary" type="button">发送验证码</button>
-                <input class="form-control" type="text" placeholder="短信验证码"/>
+                <input class="form-control sms-control" type="text" placeholder="短信验证码"/>
                 <label class="form-label"><span class="icon icon-th"></span></label>
             </div>
             <div class="form-group">
                 <button class="btn btn-block btn-primary" type="button">注册</button>
             </div>
-            <div class="form-group">
-                <label class="checkbox-group">
+            <div class="form-group checkbox-group">
+                <label class="pull-left">
                     <input type="checkbox" checked/>
                     <span class="checkbox"></span>
                     <span class="checkbox-note">同意<a class="link" href="">用户协议</a></span>
                 </label>
                 <a class="pull-right" href="login.html">
-                    <button class="btn-flexible" type="button">登录</button>
+                    <button class="btn btn-flexible" type="button">登录</button>
                 </a>
             </div>
         </form>
