2019/03/01 完善用户漫画册界面

--- a/user-book.html
+++ b/user-book.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>C</title>
+    <title>Nemo - 漫画分享平台</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/nemo.css"/>
     <link rel="stylesheet" href="css/user-book.css"/>
@@ -52,6 +52,10 @@
                 我用了这么久才能去忘记你
             </p>
             <p class="book-note"></p>
+        </div>
+        <div class="book-appreciate">
+            <span class="list-way list-active"></span>
+            <span class="trans-way"></span>
         </div>
     </section>
     <section class="content">
