--- a/user-book.html
+++ b/user-book.html
@@ -5,20 +5,21 @@
     <title>Nemo - 漫画分享平台</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/page.css"/>
     <link rel="stylesheet" href="css/user-book.css"/>
 </head>
 <body>
-<header class="header">
+<header id="header" class="header">
     <div class="header-fixed">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
-            <div class="account pull-right">
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
                 <div class="account-info">
                     <img class="account-avatar" src="images/avatar.jpg" alt=""/>
                     <span class="account-name">王振琦</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <nav class="account-nav">
+                <nav class="account-nav" v-if="isVisible">
                     <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
                     <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
                     <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
@@ -32,9 +33,9 @@
         </div>
     </div>
 </header>
-<main class="container">
+<main id="userBook" class="container">
     <section class="master">
-        <img class="book-cover" src="" alt=""/>
+        <img class="book-cover" src="images/portrait.jpg" alt=""/>
         <div class="book-info">
             <p class="book-name">漫十年</p>
             <p class="book-description">
@@ -53,14 +54,193 @@
             </p>
             <p class="book-note"></p>
         </div>
+        <div class="user-info">
+            <img class="user-avatar" src="images/avatar.jpg" alt=""/>
+        </div>
         <div class="book-appreciate">
             <span class="list-way list-active"></span>
-            <span class="trans-way"></span>
+            <span class="slide-way" @click="pageSlideModalVisible"></span>
         </div>
     </section>
     <section class="content">
-
+        <div class="page" v-for="(page, index) in pageList">
+            <img class="page-image" :src="page.image" alt=""/>
+            <p class="page-order">{{index + 1}}</p>
+            <p class="page-note">
+                <img src="images/icon/icon_setup_white.png" @click="pageUpdateModalVisible(page)"/>
+                <img src="images/icon/icon_trash_white.png" @click="pageDeleteModalVisible(page)"/>
+            </p>
+        </div>
     </section>
 </main>
+<footer class="footer">
+    <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
+</footer>
+<div id="pageSlideModal" class="modal slide" v-if="isVisible" v-cloak>
+    <img class="slide-img" :src="page.image" alt=""/>
+    <div class="slide-dismiss" @click="invisible"><img src="" alt=""/></div>
+    <section class="slide-nav pre" title="上一张" @click="preSlidePage">
+        <span class="slide-arrow"></span>
+        <img class="slide-preview" :src="prePage.image" alt=""/>
+    </section>
+    <section class="slide-nav next" title="下一张" @click="nextSlidePage">
+        <span class="slide-arrow"></span>
+        <img class="slide-preview" :src="nextPage.image" alt=""/>
+    </section>
+</div>
+<div id="pageUpdateModal" class="modal" v-if="isVisible" v-cloak>
+    <dialog class="modal-dialog">
+        <header class="modal-header">
+            <h1 class="modal-title">更新漫画分页</h1>
+            <div class="modal-dismiss">
+                <span class="icon icon-remove" @click="invisible"></span>
+            </div>
+        </header>
+        <main class="modal-content img-content">
+            <img class="modal-img" :src="pageImage" alt=""/>
+            <div class="btn-replace" @click="chooseFile"><span class="icon icon-camera"></span></div>
+            <input id="file" type="file" style="display: none"/>
+        </main>
+        <footer class="modal-footer">
+            <button class="btn btn-petite btn-default pull-right" type="button" @click="invisible">取消</button>
+            <button class="btn btn-petite btn-primary pull-right" type="button">更新</button>
+        </footer>
+    </dialog>
+</div>
+<div id="pageDeleteModal" class="modal" v-if="isVisible" v-cloak>
+    <dialog class="modal-dialog">
+        <header class="modal-header">
+            <h1 class="modal-title">删除漫画分页</h1>
+            <div class="modal-dismiss">
+                <span class="icon icon-remove" @click="invisible"></span>
+            </div>
+        </header>
+        <main class="modal-content delete-content">
+            <p>您确定要删除该漫画分页吗？</p>
+        </main>
+        <footer class="modal-footer">
+            <button class="btn btn-petite btn-default pull-right" type="button" @click="invisible">取消</button>
+            <button class="btn btn-petite btn-primary pull-right" type="button">删除</button>
+        </footer>
+    </dialog>
+</div>
+<script src="js/vue.js"></script>
+<script src="js/nemo.js"></script>
+<script>
+    const userBook = new Vue({
+        el: "#userBook",
+        data: {
+            pageList: [
+                {image: "images/fly.jpg"},
+                {image: "images/mercercliffs.jpg"},
+                {image: "images/kingfishersrock.jpg"}
+            ]
+        },
+        methods: {
+            pageSlideModalVisible: function () {
+                pageSlideModal.visible(this.pageList);
+            },
+            pageUpdateModalVisible: function (page) {
+                pageUpdateModal.visible(page);
+            },
+            pageDeleteModalVisible: function (page) {
+                pageDeleteModal.visible(page);
+            }
+        }
+    });
+
+    const pageSlideModal = new Vue({
+        el: "#pageSlideModal",
+        data: {
+            isVisible: false,
+            pageList: [],
+            page: {},
+            prePage: {},
+            nextPage: {},
+            index: 0
+        },
+        methods: {
+            visible: function (pageList) {
+                this.pageList = pageList;
+                if (this.pageList.length > 0) {
+                    this.index = 0;
+                    this.page = this.pageList[this.index];
+                    if (this.pageList.length > 1) {
+                        this.nextPage = this.pageList[this.index + 1];
+                    }
+                    this.isVisible = true;
+                }
+            },
+            invisible: function () {
+                this.isVisible = false;
+            },
+            preSlidePage: function () {
+                if (this.index > 0) {
+                    this.nextPage = this.page;
+                    this.index--;
+                    this.page = this.pageList[this.index];
+                    if (this.index > 0) {
+                        this.prePage = this.pageList[this.index - 1];
+                    } else {
+                        this.prePage = {};
+                    }
+                }
+            },
+            nextSlidePage: function () {
+                if (this.index < this.pageList.length - 1) {
+                    this.prePage = this.page;
+                    this.index++;
+                    this.page = this.pageList[this.index];
+                    if (this.index < this.pageList.length - 1) {
+                        this.nextPage = this.pageList[this.index + 1];
+                    } else {
+                        this.nextPage = {};
+                    }
+                }
+            }
+        }
+    });
+
+    const pageUpdateModal = new Vue({
+        el: "#pageUpdateModal",
+        data: {
+            isVisible: false,
+            page: {},
+            pageImage: ""
+        },
+        methods: {
+            visible: function (page) {
+                this.page = page;
+                this.pageImage = page.image;
+                this.isVisible = true;
+            },
+            invisible: function () {
+                this.isVisible = false;
+            },
+            chooseFile: function () {
+                let file = document.querySelector("#file");
+                file.click();
+                this.pageImage = getFileNativeUrl(file.files[0]);
+            }
+        }
+    });
+
+    const pageDeleteModal = new Vue({
+        el: "#pageDeleteModal",
+        data: {
+            isVisible: false,
+            page: {}
+        },
+        methods: {
+            visible: function (page) {
+                this.page = page;
+                this.isVisible = true;
+            },
+            invisible: function () {
+                this.isVisible = false;
+            },
+        }
+    });
+</script>
 </body>
 </html>
