--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <header class="header">
-    <div class="header-fixed" style="display: none">
+    <div class="header-fixed">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
             <div class="account pull-right">
@@ -44,10 +44,10 @@
                 </div>
             </div>
             <span class="header-line pull-right"></span>
-            <button class="btn btn-sm btn-link header-action login-action pull-right">登录</button>
+            <button class="btn btn-petite btn-brief header-action login-action pull-right">登录</button>
             <span class="header-line pull-right"></span>
             <a class="header-action pull-right" href="">
-                <button class="btn btn-sm btn-primary">注册</button>
+                <button class="btn btn-petite btn-primary">注册</button>
             </a>
             <span class="header-line pull-right"></span>
             <div class="query-group pull-right">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    <div class="header-fixed">
+    <div class="header-fixed" style="display: none">
         <div class="container">
             <h1 class="app-name pull-left">Nemo</h1>
             <div class="account pull-right">
