--- a/user-book.html
+++ b/user-book.html
@@ -19,7 +19,7 @@
                     <span class="account-name">王振琦</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <nav class="account-nav" v-if="isVisible">
+                <nav class="account-nav" v-if="isVisible" v-cloak>
                     <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
                     <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
                     <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
@@ -55,7 +55,14 @@
             <p class="book-note"></p>
         </div>
         <div class="user-info">
-            <img class="user-avatar" src="images/avatar.jpg" alt=""/>
+            <a class="user-style" href="">
+                <img class="user-avatar" src="images/avatar.jpg" alt=""/>
+                <span class="user-name">王振琦</span>
+            </a>
+            <button class="btn btn-elegance" type="button">
+                <span class="icon icon-link"></span>
+                <span>选择分页</span>
+            </button>
         </div>
         <div class="book-appreciate">
             <span class="list-way list-active"></span>
@@ -99,7 +106,7 @@
         <main class="modal-content img-content">
             <img class="modal-img" :src="pageImage" alt=""/>
             <div class="btn-replace" @click="chooseFile"><span class="icon icon-camera"></span></div>
-            <input id="file" type="file" style="display: none"/>
+            <input id="file" type="file" @change="analyzeFile" hidden/>
         </main>
         <footer class="modal-footer">
             <button class="btn btn-petite btn-default pull-right" type="button" @click="invisible">取消</button>
@@ -131,6 +138,8 @@
         el: "#userBook",
         data: {
             pageList: [
+                {image: "images/fly.jpg"},
+                {image: "images/mercercliffs.jpg"},
                 {image: "images/fly.jpg"},
                 {image: "images/mercercliffs.jpg"},
                 {image: "images/kingfishersrock.jpg"}
@@ -220,7 +229,9 @@
             chooseFile: function () {
                 let file = document.querySelector("#file");
                 file.click();
-                this.pageImage = getFileNativeUrl(file.files[0]);
+            },
+            analyzeFile: function () {
+                this.pageImage = getFileNativeUrl(document.getElementById("file").files[0]);
             }
         }
     });
