--- a/author-index.html
+++ b/author-index.html
@@ -1,10 +1,218 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nemo - 漫画分享平台</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/book.css"/>
+    <link rel="stylesheet" href="css/author-index.css"/>
 </head>
 <body>
-
+<header id="header" class="header">
+    <div class="header-fixed">
+        <div class="container">
+            <h1 class="app-name pull-left">Nemo</h1>
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
+                <div class="account-info">
+                    <img class="account-avatar" src="images/avatar.jpg" alt=""/>
+                    <span class="account-name">王振琦</span>
+                    <span class="icon icon-menu-down"></span>
+                </div>
+                <nav class="account-nav" v-if="isVisible" v-cloak>
+                    <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
+                    <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
+                    <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
+                </nav>
+            </div>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
+        </div>
+    </div>
+</header>
+<main class="container">
+    <section class="master">
+        <img class="author-portrait" src="images/kingfishersrock.jpg" alt=""/>
+        <div class="author-info">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <button class="btn btn-elegance" type="button">
+                <span class="icon icon-heart"></span>
+                <span>关注</span>
+            </button>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+            <ul class="author-subscribe">
+                <li class="subscribe-item">
+                    <span class="subscribe-num">8</span>
+                    <span class="subscribe-desc">作品</span>
+                </li>
+                <li class="subscribe-item">
+                    <span class="subscribe-num">16</span>
+                    <span class="subscribe-desc">关注</span>
+                </li>
+                <li class="subscribe-item">
+                    <span class="subscribe-num">1024</span>
+                    <span class="subscribe-desc">粉丝</span>
+                </li>
+                <li class="subscribe-item">
+                    <span class="subscribe-num">32</span>
+                    <span class="subscribe-desc">收藏</span>
+                </li>
+            </ul>
+        </div>
+        <div class="author-support"></div>
+    </section>
+    <section class="title">
+        <p class="title-name">漫画册</p>
+        <p class="title-note">如果喜欢他的作品 那就关注他吧</p>
+    </section>
+    <section class="content">
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+    </section>
+</main>
+<footer class="footer">
+    <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技团队</span>
+</footer>
+<script src="js/vue.js"></script>
+<script src="js/nemo.js"></script>
 </body>
 </html>
