2019/03/08 完善个人和漫画家主页

--- a/user-index.html
+++ b/user-index.html
@@ -37,9 +37,9 @@
 <main id="userIndex" class="container">
     <div class="master">
         <section class="user-style">
-            <img class="user-portrait" src="" alt=""/>
+            <img class="user-portrait" src="images/portrait.jpg" alt=""/>
             <div class="user-info">
-                <img class="user-avatar" src="" alt=""/>
+                <img class="user-avatar" src="images/avatar.jpg" alt=""/>
                 <h1 class="user-name">王振琦</h1>
                 <p class="user-location">山东省&nbsp;&nbsp;青岛市</p>
                 <p class="user-biography">
