--- a/user-book.html
+++ b/user-book.html
@@ -63,6 +63,10 @@
                 <span class="icon icon-link"></span>
                 <span>选择分页</span>
             </button>
+            <p class="book-settings">
+                <span class="icon icon-cog"></span>
+            </p>
+            <ul class=""></ul>
         </div>
         <div class="book-appreciate">
             <span class="list-way list-active"></span>
