--- a/index.html
+++ b/index.html
@@ -7,25 +7,7 @@
     <link rel="stylesheet" href="css/nemo.css"/>
     <link rel="stylesheet" href="css/book.css"/>
     <link rel="stylesheet" href="css/author.css"/>
-    <link rel="stylesheet" href="css/page.css"/>
-    <style>
-        .form-label-2 {
-        }
-
-        .form-label-2 .form-label {
-            width: 30px;
-            margin-right: 12px;
-        }
-
-        .form-label-2 .form-control {
-            width: 328px;
-        }
-
-        .form-label-2 textarea.form-control {
-            min-width: 328px;
-            max-width: 328px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
 <header class="header">
@@ -38,10 +20,10 @@
                     <span class="account-name">手机版</span>
                     <span class="icon icon-menu-down"></span>
                 </div>
-                <div class="app-mobile">
-                    <img class="app-code" src="images/qrcode.png" alt=""/>
-                    <p class="app-code-note">扫一扫下载手机客户端</p>
-                </div>
+                <!--<div class="app-mobile">-->
+                    <!--<img class="app-code" src="images/qrcode.png" alt=""/>-->
+                    <!--<p class="app-code-note">扫一扫下载手机客户端</p>-->
+                <!--</div>-->
             </div>
             <span class="header-line pull-right"></span>
             <button class="btn btn-petite btn-brief header-action login-action pull-right">登录</button>
@@ -80,63 +62,18 @@
     </div>
 </header>
 <main class="container">
-    <section class="content">
-        <div class="author pull-left">
-            <section class="author-style">
-                <img class="author-portrait" src="images/portrait.jpg" alt=""/>
-                <img class="author-avatar" src="images/avatar.jpg" alt=""/>
-                <h6 class="author-name">王振琦</h6>
-            </section>
-            <section class="author-info">
-                <p class="author-biography">
-                    我是一个喜欢艺术热爱生活的小胖子
-                    我的梦想是成为一名架构师 但是我还不怎么会编程
-                    那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
-                    还是不要做架构师了 架构师什么的都是秃头
-                    也不要做艺术家了 艺术家什么的都是流氓
-                    比流氓还流氓的是专家学者
+    <section class="master">
+        <div class="carousel">
+            <div class="carousel-item">
+                <img src="images/kingfishersrock.jpg" alt=""/>
+                <p class="carousel-caption">
+                    <span class="caption-title">儒墨未来 至臻之作</span>
+                    <span class="caption-note">作者 王振琦</span>
                 </p>
-                <p class="author-note">
-                    <span class="pull-left">作品&nbsp;18</span>
-                    <span class="pull-left"></span>
-                    <span class="pull-left">粉丝&nbsp;1660</span>
-                    <a class="icon icon-link pull-right" href=""></a>
-                </p>
-            </section>
+            </div>
         </div>
-        <div class="book pull-left">
-            <img class="book-cover" src="images/portrait.jpg" alt=""/>
-            <section class="book-info">
-                <h6 class="book-name">漫十年</h6>
-                <p class="book-description">
-                    五月初
-                    屹立在温暖的阳光下
-                    心情也变得柔和起来
-                    那些你曾期待的 却放弃你的
-                    那些你不在意的 你已放弃的
-                    都成了自己辛辛苦苦的独角戏
-                    在新的生活到来之前
-                    在煎熬中最后翻阅那些过往
-                    一番不舍与惋惜之后
-                    才发觉一切是那么的不值得
-                    原来实现愿望是这么的难
-                    我用了这么久才能去忘记你
-                </p>
-                <p class="book-note">
-                    <span class="pull-left">风格&nbsp;清新</span>
-                    <span class="pull-left"></span>
-                    <span class="pull-left">收藏&nbsp;123</span>
-                    <a class="icon icon-link pull-right" href=""></a>
-                </p>
-            </section>
-        </div>
-        <div class="page pull-left">
-            <img class="page-image" src="images/nemo.jpg" alt=""/>
-            <p class="page-order">1</p>
-            <p class="page-note">
-                <img src="images/icon/icon_setup_white.png"/>
-                <img src="images/icon/icon_trash_white.png"/>
-            </p>
+        <div class="panel">
+
         </div>
     </section>
 </main>
