--- a/author-list.html
+++ b/author-list.html
@@ -4,8 +4,123 @@
     <meta charset="UTF-8">
     <title>Nemo - 漫画分享平台</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/author-list.css"/>
 </head>
 <body>
-
+<header id="header" class="header">
+    <div class="header-fixed">
+        <div class="container">
+            <h1 class="app-name pull-left">Nemo</h1>
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
+                <div class="account-info">
+                    <img class="account-avatar" src="images/avatar.jpg" alt=""/>
+                    <span class="account-name">王振琦</span>
+                    <span class="icon icon-menu-down"></span>
+                </div>
+                <nav class="account-nav" v-if="isVisible" v-cloak>
+                    <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
+                    <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
+                    <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
+                </nav>
+            </div>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
+        </div>
+    </div>
+</header>
+<main class="container">
+    <section class="master">
+        <p>超人气漫画家推荐</p>
+    </section>
+    <section class="content">
+        <a class="author" href="author-index.html">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <p class="author-note">
+                <span>作品&nbsp;3&nbsp;&nbsp;</span>
+                <span>粉丝&nbsp;188</span>
+            </p>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+        </a>
+        <a class="author" href="author-index.html">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <p class="author-note">
+                <span>作品&nbsp;36&nbsp;&nbsp;</span>
+                <span>粉丝&nbsp;1876</span>
+            </p>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+        </a>
+        <a class="author" href="author-index.html">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <p class="author-note">
+                <span>作品&nbsp;3&nbsp;&nbsp;</span>
+                <span>粉丝&nbsp;182</span>
+            </p>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+        </a>
+        <a class="author" href="author-index.html">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <p class="author-note">
+                <span>作品&nbsp;3&nbsp;&nbsp;</span>
+                <span>粉丝&nbsp;42</span>
+            </p>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+        </a>
+        <a class="author" href="author-index.html">
+            <img class="author-avatar" src="images/avatar.jpg" alt=""/>
+            <p class="author-name">王振琦</p>
+            <p class="author-note">
+                <span>作品&nbsp;3&nbsp;&nbsp;</span>
+                <span>粉丝&nbsp;5</span>
+            </p>
+            <p class="author-biography">
+                我是一个喜欢艺术热爱生活的小胖子
+                我的梦想是成为一名架构师 但是我还不怎么会编程
+                那就做一个艺术家吧 可是我漫画画的不好看 乐感也不好
+                还是不要做架构师了 架构师什么的都是秃头
+                也不要做艺术家了 艺术家什么的都是流氓
+                比流氓还流氓的是专家学者
+            </p>
+        </a>
+    </section>
+</main>
+<footer class="footer">
+    <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
+</footer>
 </body>
 </html>
