--- a/book-list.html
+++ b/book-list.html
@@ -4,8 +4,186 @@
     <meta charset="UTF-8">
     <title>Nemo - 漫画分享平台</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/nemo.css"/>
+    <link rel="stylesheet" href="css/book.css"/>
+    <link rel="stylesheet" href="css/book-list.css"/>
 </head>
 <body>
-
+<header id="header" class="header">
+    <div class="header-fixed">
+        <div class="container">
+            <h1 class="app-name pull-left">Nemo</h1>
+            <div class="account pull-right" @mouseover="navVisible" @mouseout="navInvisible">
+                <div class="account-info">
+                    <img class="account-avatar" src="images/avatar.jpg" alt=""/>
+                    <span class="account-name">王振琦</span>
+                    <span class="icon icon-menu-down"></span>
+                </div>
+                <nav class="account-nav" v-if="isVisible" v-cloak>
+                    <a class="account-item" href=""><span class="icon icon-user"></span>个人主页</a>
+                    <a class="account-item" href=""><span class="icon icon-cog"></span>账号设置</a>
+                    <p class="account-item account-logout"><span class="icon icon-off"></span>退出登录</p>
+                </nav>
+            </div>
+            <span class="header-line pull-right"></span>
+            <div class="query-group pull-right">
+                <label class="query-label"><span class="icon icon-search"></span></label>
+                <input class="query-control" type="text" placeholder="搜索您感兴趣的内容"/>
+            </div>
+        </div>
+    </div>
+</header>
+<main class="container">
+    <section class="master">
+        <div class="theme">
+            <p>热点漫画册欣赏</p>
+        </div>
+        <ul class="style">
+            <li class="style-item style-title">风格</li>
+            <li class="style-item">古典</li>
+            <li class="style-item">热血</li>
+            <li class="style-item">唯美</li>
+            <li class="style-item">清新</li>
+            <li class="style-item">推理</li>
+            <li class="style-item">爆笑</li>
+            <li class="style-item style-active">悬疑</li>
+        </ul>
+    </section>
+    <section class="content">
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+        <div class="book">
+            <img class="book-cover" src="images/portrait.jpg" alt=""/>
+            <section class="book-info">
+                <h6 class="book-name">漫十年</h6>
+                <p class="book-description">
+                    五月初
+                    屹立在温暖的阳光下
+                    心情也变得柔和起来
+                    那些你曾期待的 却放弃你的
+                    那些你不在意的 你已放弃的
+                    都成了自己辛辛苦苦的独角戏
+                    在新的生活到来之前
+                    在煎熬中最后翻阅那些过往
+                    一番不舍与惋惜之后
+                    才发觉一切是那么的不值得
+                    原来实现愿望是这么的难
+                    我用了这么久才能去忘记你
+                </p>
+                <p class="book-note">
+                    <span class="pull-left">风格&nbsp;清新</span>
+                    <span class="pull-left"></span>
+                    <span class="pull-left">收藏&nbsp;123</span>
+                    <a class="icon icon-link pull-right" href=""></a>
+                </p>
+            </section>
+        </div>
+    </section>
+</main>
+<footer class="footer">
+    <span>&copy;&nbsp;2016-2019&nbsp;儒墨未来科技有限公司</span>
+</footer>
 </body>
 </html>
